array.island.Island.scala.error
Compilation error:
Island:11: error: identifier expected but integer literal found.
  if(length(num)==1 || ( length(num) == 2  && num[0] == num [1])){
                                                  ^Island:21: error: ']' expected but '}' found.
} 
^