array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  return(length(num))
  var nv=0
  
  var compteur=1
  //if (lenght(num)==1 || ((lenght.num==2) && num[0]==num[1])){
    //nv=nv+1
  //}
  
  if(length(num)==1 || ( length(num) == 2  && num[0] == num [1])){
    nv= nv +1
  }
  else{
    while (num[0] != num[compteur]){
      compteur=compteur+1
    }
    nv=nv+1
  }
  return(nv+island(num[1:compteur]))
}